# fincore-ledger

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  docker-compose.yml
.github/: pull_request_template.md
apps/api/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 9494fd2ab34a_initial_financial_platform_schema.py
apps/api/fincore/: __init__.py  main.py  public_dataset_seed.py  seed.py
apps/api/fincore/api/: admin.py  auth.py  deps.py  health.py  operations.py  schemas.py  transactions.py  wallets.py
apps/api/fincore/core/: config.py  crypto.py  errors.py  logging.py  middleware.py  security.py
apps/api/fincore/db/: models.py  session.py
apps/api/fincore/domain/: fees.py  money.py  permissions.py  states.py
apps/api/fincore/providers/: base.py  development.py  registry.py
apps/api/fincore/services/: audit.py  bootstrap.py  financial.py  idempotency.py  ledger.py  outbox.py  reconciliation.py
apps/api/fincore/worker/: __init__.py  celery_app.py  tasks.py
apps/api/tests/: conftest.py  test_api.py  test_domain.py  test_financial_workflows.py  test_public_dataset_seed.py
data/: NOTICE.md
docs/: DATASET.md  api-examples.md  architecture.md  chart-of-accounts.md  deployment.md  ledger-design.md  openapi.json  payment-lifecycle.md  production-readiness.md  provider-integration.md  reconciliation.md  security-model.md  verification.md
infrastructure/: postgres-init.sql
(+31 files in other folders)
