[project]
name = "fincore-ledger-api"
version = "1.0.0"
description = "Ledger-first digital wallet and payment processing API"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.128.2",
  "uvicorn[standard]==0.35.0",
  "sqlalchemy==2.0.50",
  "alembic==1.18.4",
  "pydantic==2.13.4",
  "pydantic-settings==2.12.0",
  "psycopg[binary]==3.2.10",
  "PyJWT==2.10.1",
  "argon2-cffi==25.1.0",
  "python-multipart==0.0.20",
  "redis==6.4.0",
  "celery==5.5.3",
  "httpx==0.28.1",
  "structlog==25.4.0",
  "cryptography==45.0.7",
  "email-validator==2.2.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["B008", "E501"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
exclude = "alembic/versions"

[[tool.mypy.overrides]]
module = ["celery.*", "redis.*"]
ignore_missing_imports = true
